--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TextUtils is a utility is can be used to manipulate your text in the way you want."
+      content="TextUtils is a word counter and character counting utility is can be used to manipulate your text in the way you want. You can remove extra spaces, copy the manipulated text, convert the whole text to uppercase and also to lowercase."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
